[gd_scene load_steps=7 format=3 uid="uid://df5vc0tuapp46"]

[ext_resource type="Script" path="res://scripts/basic_movement_controller.gd" id="1_u3lr5"]
[ext_resource type="PackedScene" uid="uid://batjptmmditm3" path="res://scenes/avoidance_vision.tscn" id="2_yxhrl"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_pix50"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_d3to5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_acduy"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_xwxxp"]

[node name="ExplorerAI" type="Node2D"]
script = ExtResource("1_u3lr5")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 24.0
target_desired_distance = 48.0
avoidance_enabled = true
avoidance_layers = 0
avoidance_mask = 0

[node name="AvoidanceVision" parent="." instance=ExtResource("2_yxhrl")]
size = 20.0

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_pix50")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_d3to5")
initial_state = NodePath("Pursuit")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("4_d3to5")
initial_state = NodePath("Standing")

[node name="Standing" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("5_acduy")

[node name="On Walk Start" type="Node" parent="StateChart/Root/Idle/Standing"]
script = ExtResource("6_xwxxp")
to = NodePath("../../Walking")
delay_seconds = 3.0

[node name="Walking" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("5_acduy")

[node name="On Walk Finish" type="Node" parent="StateChart/Root/Idle/Walking"]
script = ExtResource("6_xwxxp")
to = NodePath("../../Standing")
delay_seconds = 1.0

[node name="Pursuit" type="Node" parent="StateChart/Root"]
script = ExtResource("4_d3to5")
initial_state = NodePath("Following")

[node name="Following" type="Node" parent="StateChart/Root/Pursuit"]
script = ExtResource("5_acduy")

[node name="On Lost Sight" type="Node" parent="StateChart/Root/Pursuit/Following"]
script = ExtResource("6_xwxxp")
to = NodePath("../../Searching")
event = &"lost sight"

[node name="Searching" type="Node" parent="StateChart/Root/Pursuit"]
script = ExtResource("5_acduy")

[node name="On Seen" type="Node" parent="StateChart/Root/Pursuit/Searching"]
script = ExtResource("6_xwxxp")
to = NodePath("../../Following")
event = &"seen player"

[node name="On Timeout" type="Node" parent="StateChart/Root/Pursuit/Searching"]
script = ExtResource("6_xwxxp")
to = NodePath("../../../Idle")
delay_seconds = 5.0

[connection signal="state_physics_processing" from="StateChart/Root/Idle/Standing" to="." method="_on_standing_state_physics_processing"]
[connection signal="taken" from="StateChart/Root/Idle/Standing/On Walk Start" to="." method="_on_on_walk_start_taken"]
[connection signal="state_physics_processing" from="StateChart/Root/Idle/Walking" to="." method="_on_walking_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Pursuit/Following" to="." method="_on_following_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Pursuit/Searching" to="." method="_on_searching_state_physics_processing"]
